5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1646_2449.log
== TEST (2019-04-19 12:39:11) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
ce = 1
bf = 1
ae = 1
bd = 1
af = 1
cd = 1
ae = 1
bd = 1
# valor X
x = ((ce - bf)//(ae - bd))
# valor Y
y = ((af - cd)//(ae - bd))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
print(x, y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = ((ce - bf)//(ae - bd))
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:39:18) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
ce = 1
bf = 1
ae = 1
bd = 1
af = 1
cd = 1
ae = 1
bd = 1
# valor X
x = ((ce - bf)//(ae - bd))
# valor Y
y = ((af - cd)//(ae - bd))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
print(x, y)

-- EXECUTION TIME:
0.140825
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 11, in <module>
    x = ((ce - bf)//(ae - bd))
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:39:44) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
ce = 1
bf = 1
ae = 1
bd = 1
af = 1
cd = 1
ae = 1
bd = 1
# valor X
x = ((ce - bf)//(ae - bd))
# valor Y
y = ((af - cd)//(ae - bd))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(x, y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = ((ce - bf)//(ae - bd))
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:39:47) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
ce = 1
bf = 1
ae = 1
bd = 1
af = 1
cd = 1
ae = 1
bd = 1
# valor X
x = ((ce - bf)//(ae - bd))
# valor Y
y = ((af - cd)//(ae - bd))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(x, y)

-- EXECUTION TIME:
0.133039
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 11, in <module>
    x = ((ce - bf)//(ae - bd))
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:39:48) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
ce = 1
bf = 1
ae = 1
bd = 1
af = 1
cd = 1
ae = 1
bd = 1
# valor X
x = ((ce - bf)//(ae - bd))
# valor Y
y = ((af - cd)//(ae - bd))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(x, y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = ((ce - bf)//(ae - bd))
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:40:57) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
ce = 8
bf = 4
ae = 8
bd = 6
af = 4
cd = 6
ae = 6
bd = 8
# valor X
x = ((ce - bf)//(ae - bd))
# valor Y
y = ((af - cd)//(ae - bd))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(x, y)

-- OUTPUT:
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:41:02) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
ce = 8
bf = 4
ae = 8
bd = 6
af = 4
cd = 6
ae = 6
bd = 8
# valor X
x = ((ce - bf)//(ae - bd))
# valor Y
y = ((af - cd)//(ae - bd))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(x, y)

-- EXECUTION TIME:
0.12374
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:41:06) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
ce = 8
bf = 4
ae = 8
bd = 6
af = 4
cd = 6
ae = 6
bd = 8
# valor X
x = ((ce - bf)//(ae - bd))
# valor Y
y = ((af - cd)//(ae - bd))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(x, y)

-- OUTPUT:
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:44:16) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 8
b = 4
c = 8
d = 6
e = 4
f = 6

# valor X
x = ((c*e) - (b*f))//((a*e) - (b*d))
# valor Y
y = ((a*f) - (c*d))//((a*e) - (b*d))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(x, y)

-- OUTPUT:
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:44:19) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 8
b = 4
c = 8
d = 6
e = 4
f = 6

# valor X
x = ((c*e) - (b*f))//((a*e) - (b*d))
# valor Y
y = ((a*f) - (c*d))//((a*e) - (b*d))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(x, y)

-- OUTPUT:
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:44:23) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 8
b = 4
c = 8
d = 6
e = 4
f = 6

# valor X
x = ((c*e) - (b*f))//((a*e) - (b*d))
# valor Y
y = ((a*f) - (c*d))//((a*e) - (b*d))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(x, y)

-- EXECUTION TIME:
0.199301
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:50:19) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float((c*e) - (b*f))/((a*e) - (b*d))
# valor Y
y = float((a*f) - (c*d))/((a*e) - (b*d))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(x)
	print(y)

-- OUTPUT:
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:50:25) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float((c*e) - (b*f))/((a*e) - (b*d))
# valor Y
y = float((a*f) - (c*d))/((a*e) - (b*d))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(x)
	print(y)

-- EXECUTION TIME:
0.121125
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:52:37) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c*e) - (b*f))/((a*e) - (b*d))
# valor Y
y = ((a*f) - (c*d))/((a*e) - (b*d))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(round(x, 1))
	print(round(y, 1))

-- OUTPUT:
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:52:41) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c*e) - (b*f))/((a*e) - (b*d))
# valor Y
y = ((a*f) - (c*d))/((a*e) - (b*d))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(round(x, 1))
	print(round(y, 1))

-- EXECUTION TIME:
0.164341
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:53:54) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c*e) - (b*f))/((a*e) - (b*d))
# valor Y
y = ((a*f) - (c*d))/((a*e) - (b*d))
# Condicional
if (x, y == 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(round(x, 1))
	print(round(y, 1))

-- OUTPUT:
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:54:00) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c*e) - (b*f))/((a*e) - (b*d))
# valor Y
y = ((a*f) - (c*d))/((a*e) - (b*d))
# Condicional
if (x, y == 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	print(round(x, 1))
	print(round(y, 1))

-- EXECUTION TIME:
0.215286
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:54:55) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c*e) - (b*f))/((a*e) - (b*d))
# valor Y
y = ((a*f) - (c*d))/((a*e) - (b*d))
	print(round(x, 1))
	print(round(y, 1))
# Condicional
if (x, y == 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- ERROR:
File "XXXX", line 13
    print(round(x, 1))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:56:20) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
# valor Y
y = ((a*f) - (c*d))/((a*e) - (b*d))
	print(round(x, 1))
	print(round(y, 1))
# Condicional
if (x, y == 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- ERROR:
File "XXXX", line 13
    print(round(x, 1))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:57:41) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
# valor Y
y = ((a*f) - (c*d))/((a*e) - (b*d))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y == 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- OUTPUT:
-1.0
2.0
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:57:47) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
# valor Y
y = ((a*f) - (c*d))/((a*e) - (b*d))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y == 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.128837
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-1.0
2.0
Tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:57:56) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
# valor Y
y = ((a*f) - (c*d))/((a*e) - (b*d))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y == 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- OUTPUT:
-1.0
2.0
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:58:20) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
# valor Y
y = ((a*f) - (c*d))/((a*e) - (b*d))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y == 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.171867
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-1.0
2.0
Tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:58:35) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
# valor Y
y = ((a*f) - (c*d))/((a*e) - (b*d))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- OUTPUT:
-1.0
2.0
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:58:39) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
# valor Y
y = ((a*f) - (c*d))/((a*e) - (b*d))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.153617
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-1.0
2.0
Tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:58:40) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
# valor Y
y = ((a*f) - (c*d))/((a*e) - (b*d))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- OUTPUT:
-1.0
2.0
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 12:59:06) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
# valor Y
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- OUTPUT:
-1.0
2.0
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 12:59:07) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
# valor Y
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.135556
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-1.0
2.0
Tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:00:52) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = (((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = (((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- OUTPUT:
-1.0
2.0
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:00:59) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = (((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = (((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.115305
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-1.0
2.0
Tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:21:20) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float(((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- ERROR:
File "XXXX", line 10
    x = float((c * e) - (b * f)) / ((a * e) - (b * d)))
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:21:23) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float(((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.146091
-- ERROR:
  File "/home/codebench/codes/1646/2449/main.py", line 10
    x = float((c * e) - (b * f)) / ((a * e) - (b * d)))
                                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:21:26) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float(((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- ERROR:
File "XXXX", line 10
    x = float((c * e) - (b * f)) / ((a * e) - (b * d)))
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:22:54) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float(((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float(((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- OUTPUT:
-1.0
2.0
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:23:10) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float(((c * e) - (b * f)) // ((a * e) - (b * d)))
# valor Y
y = float(((a * f) - (c * d)) // ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- OUTPUT:
-1.0
2.0
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:23:17) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float(((c * e) - (b * f)) // ((a * e) - (b * d)))
# valor Y
y = float(((a * f) - (c * d)) // ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.173214
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-1.0
2.0
Tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:23:40) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- OUTPUT:
-1.0
2.0
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:23:44) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.13176
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-1.0
2.0
Tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:23:47) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- OUTPUT:
-1.0
2.0
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:24:28) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- OUTPUT:
-1.0
2.0
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:24:32) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.133353
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-1.0
2.0
Tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-1.0
2.0
Tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:24:33) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(x, 1))
print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- OUTPUT:
-1.0
2.0
Tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:25:12) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
	print(round(x, 1))
	print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- ERROR:
File "XXXX", line 13
    print(round(x, 1))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:26:00) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
	print(round("x", 1))
	print(round("y", 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- ERROR:
File "XXXX", line 13
    print(round("x", 1))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:26:05) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
	print(round("x", 1))
	print(round("y", 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.11979
-- ERROR:
  File "/home/codebench/codes/1646/2449/main.py", line 13
    print(round("x", 1))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:26:05) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
	print(round("x", 1))
	print(round("y", 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.189561
-- ERROR:
  File "/home/codebench/codes/1646/2449/main.py", line 13
    print(round("x", 1))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:26:05) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
	print(round("x", 1))
	print(round("y", 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- ERROR:
File "XXXX", line 13
    print(round("x", 1))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:27:02) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(round("x", 1))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
	print(round("y", 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- ERROR:
File "XXXX", line 11
    print(round("x", 1))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:27:08) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(round("x", 1))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
	print(round("y", 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.141904
-- ERROR:
  File "/home/codebench/codes/1646/2449/main.py", line 11
    print(round("x", 1))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:27:26) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(round(x, 1))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
	print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- ERROR:
File "XXXX", line 11
    print(round(x, 1))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:27:30) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(round(x, 1))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
	print(round(y, 1))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.111687
-- ERROR:
  File "/home/codebench/codes/1646/2449/main.py", line 11
    print(round(x, 1))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:28:01) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(round(x, 0))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
	print(round(y, 0))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- ERROR:
File "XXXX", line 11
    print(round(x, 0))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:28:03) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(round(x, 0))
# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
	print(round(y, 0))
# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.148573
-- ERROR:
  File "/home/codebench/codes/1646/2449/main.py", line 11
    print(round(x, 0))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:29:45) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(round(x, 0))

# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
	print(round(y, 0))

# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- ERROR:
File "XXXX", line 11
    print(round(x, 0))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:31:11) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
	print(round("x", 1))

# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
	print(round("y", 1))

# Condicional
if (x, y > 0):
	print("Tem solucao")
else:
	print("Nao tem solucao")
	
	
	

-- ERROR:
File "XXXX", line 11
    print(round("x", 1))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:32:04) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
print(round(x, 1))

# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(y, 1))

# Condicional
if (x, y > 0):
print("Tem solucao")
else:
print("Nao tem solucao")
	
	
	

-- ERROR:
File "XXXX", line 19
    print("Tem solucao")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:32:09) 
-- CODE:
# Elabore um programa que leia o conj de coneficientes a, b, c, d, f
a = 1.0
b = 2.0
c = 3.0
d = 4.0
e = 5.0
f = 6.0

# valor X
x = float (((c * e) - (b * f)) / ((a * e) - (b * d)))
print(round(x, 1))

# valor Y
y = float (((a * f) - (c * d)) / ((a * e) - (b * d)))
print(round(y, 1))

# Condicional
if (x, y > 0):
print("Tem solucao")
else:
print("Nao tem solucao")
	
	
	

-- EXECUTION TIME:
0.149102
-- ERROR:
  File "/home/codebench/codes/1646/2449/main.py", line 19
    print("Tem solucao")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
